APM-882 Change release trigger to build on finish of build

--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -1,9 +1,6 @@
 name: "$(SourceBranchName)+$(BuildID)"
 
-trigger:
-  branches:
-    include:
-      - refs/tags/v*
+trigger: none
 
 pr: none
 
@@ -29,6 +26,10 @@ resources:
   pipelines:
   - pipeline: IdentityService
     source: "Identity-Service-Build"
+    trigger:
+      branches:
+        include:
+          - refs/tags/v*
 
 pool:
   vmImage: 'ubuntu-latest'
