--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -32,7 +32,7 @@ variables:
   NAMESPACE: from_branchname
 
 pool:
-  vmImage: 'ubuntu-18.04'
+  vmImage: 'ubuntu-latest'
 
 stages:
   - stage: DeployInternalDev
