APM-882 Add ansible proxy deploy to pr pipeline

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -30,6 +30,7 @@ variables:
   IDENTITY_TARGET_SERVER: identity-server
   FORCE_SANDBOX: false
   NAMESPACE: from_branchname
+  PROXY_NAME: live
 
 pool:
   vmImage: 'ubuntu-latest'
