APM-882 Fix PR deploy triggers

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -1,26 +1,15 @@
 name: "$(SourceBranchName)+$(BuildID)"
 
+# Prevents building every commit or on PR
 trigger: none
+pr: none
 
-pr:
-  branches:
-    include:
-      - master
-
+# Consume an artifact from the build pipeline as soon as it becomes available.
 resources:
   pipelines:
-  - pipeline: IdentityService
-    source: "Identity-Service-Build"
-
-parameters:
-  - name : artifactBranch
-    displayName: Artifact Branch (e.g. feature/myfeature or v1.0.0-alpha)
-    type: string
-    default: $(Build.SourceBranch)
-  - name : artifactBuildId
-    displayName: Artifact Build Id (e.g. run Id for the build to download). Overrides Artifact Branch if not "latest".
-    type: string
-    default: latest
+  - pipeline: identity-service
+    source: Identity-Service-Build
+    trigger: true
 
 variables:
   SERVICE_NAME: identity-service
@@ -50,10 +39,5 @@ stages:
             deploy:
               steps:
                 - template: templates/download-build-artifact.yml
-                  parameters:
-                    serviceName: $(SERVICE_NAME)
-                    artifactBuildId: ${{ parameters.artifactBuildId }}
-                    artifactBranch: ${{ parameters.artifactBranch }}
-                    pipelineAlias: IdentityService
                 - template: templates/identity-service-templating.yml
                 - template: templates/deploy-namespaced-service.yml
