--- a/azure/azure-build-pipeline.yml
+++ b/azure/azure-build-pipeline.yml
@@ -21,15 +21,11 @@ jobs:
     variables:
       API_TEST_ENV_FILE_PATH: "tests/e2e/environments/local.postman_environment.json"
       PIP_CACHE_DIR: ".poetry"
+      SERVICE_NAME: "identity-service"
     steps:
       - checkout: self
 
-      - bash: echo "##vso[task.setvariable variable=BRANCH_NAME]`echo $(System.PullRequest.SourceBranch) | sed -r 's/[/|\\@":<>?*]+/-/g'`"
-        displayName: Set and replace invalid characters in branch name
-
-      - bash: 'echo "##vso[build.updatebuildnumber]$(BRANCH_NAME)+$(Build.BuildID)"'
-        condition: eq(variables['Build.SourceBranchName'], 'merge')
-        displayName: Update build ID if this is a pull request
+      - template: templates/setup-build-name.yml
 
       - task: UsePythonVersion@0
         displayName: "Use Python 3.8"
@@ -85,4 +81,4 @@ jobs:
         displayName: Build Release Package
 
       - publish: dist/
-        artifact: identity-service-$(Build.BuildNumber)
+        artifact: $(Build.BuildNumber)
