--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -9,7 +9,11 @@ resources:
   pipelines:
   - pipeline: identity-service
     source: Identity-Service-Build
-    trigger: true
+    trigger:
+      exclude:
+        - "master"
+        - "refs/heads/master"
+        - "refs/tags/v*"
 
 variables:
   SERVICE_NAME: identity-service
@@ -40,4 +44,5 @@ stages:
               steps:
                 - template: templates/download-build-artifact.yml
                 - template: templates/identity-service-templating.yml
+                - template: templates/setup-build-name.yml
                 - template: templates/deploy-namespaced-service.yml
