APM-882 Pass branch name to namespace

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -10,10 +10,11 @@ resources:
   - pipeline: identity-service
     source: Identity-Service-Build
     trigger:
-      exclude:
-        - "master"
-        - "refs/heads/master"
-        - "refs/tags/v*"
+      branches:
+        exclude:
+          - "master"
+          - "refs/heads/master"
+          - "refs/tags/v*"
 
 variables:
   SERVICE_NAME: identity-service
