--- a/azure/templates/deploy-namespaced-service.yml
+++ b/azure/templates/deploy-namespaced-service.yml
@@ -31,7 +31,7 @@ steps:
       
       if [ "$(NAMESPACE)" == "from_branchname" ]; then
         # Change reference to get from right area
-        export NAMESPACE=$(Build.SourceBranchName)
+        export NAMESPACE=$(BRANCH_NAME)
       else
         export NAMESPACE="$(NAMESPACE)"
       fi
@@ -61,7 +61,7 @@ steps:
 
       export SERVICE_DIR=`realpath "$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)"`
       export PROXY_DIR="$SERVICE_DIR/proxies/$(PROXY_NAME)"
-      export SERVICE_NAME="$(SERVICE_NAME)-$(APIGEE_ENVIRONMENT)"
+      export SERVICE_NAME="$(SERVICE_NAME)-$(APIGEE_ENVIRONMENT)-$(_NAMESPACE)"
       export SERVICE_BASE_PATH="$(SERVICE_BASE_PATH)"
       export APIGEE_ACCESS_TOKEN="$(secret.AccessToken)"
 
