--- a/azure/templates/download-build-artifact.yml
+++ b/azure/templates/download-build-artifact.yml
@@ -1,4 +1,13 @@
 steps:
+  # stops automatic download of artifact
+  - download: none
+
   - task: DownloadPipelineArtifact@2
     inputs:
-      source: 'current'
+      source: 'specific'
+      project: '$(resources.pipeline.Identity-Service-Build.projectID)'
+      definition: '$(resources.pipeline.Identity-Service-Build.pipelineID)'
+      preferTriggeringPipeline: true
+      buildVersionToDownload: 'latestFromBranch'
+      branchName: '$(Build.SourceBranch)'
+      path: $(Pipeline.Workspace)/$(SERVICE_NAME)
