APM-882 Fix artifact folder and allow terraform step to be skipped

--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -13,7 +13,7 @@ variables:
 
 resources:
   pipelines:
-  - pipeline: IdentityService
+  - pipeline: identity-service
     source: "Identity-Service-Build"
     trigger:
       branches:
