--- a/azure/templates/deploy-service.yml
+++ b/azure/templates/deploy-service.yml
@@ -36,33 +36,16 @@ steps:
 
   - bash: |
       set -euo pipefail
-      
-      if [ -d  $(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/terraform ]; then
-      cd $(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/terraform
-      
-      terraform init -no-color -backend-config="storage_account_name=hawdonnhsddevopssacc" -backend-config="container_name=$(APIGEE_ORGANIZATION)" -backend-config="key=$(APIGEE_ENVIRONMENT)-$(SERVICE_NAME).tfstate" -backend-config="sas_token=$(SAS_TOKEN)"
-      
-      export API_ACCESS_TOKEN="$(secret.AccessToken)"
-      
-      cat > ./tmp.tfvars.tmp <<'_EOF'
-      apigee_token = "${API_ACCESS_TOKEN}"
-      apigee_environment = "$(APIGEE_ENVIRONMENT)"
-      apigee_organization = "$(APIGEE_ORGANIZATION)"
-      namespace = ""
-      status_cake_username = "$(STATUS_CAKE_USERNAME)"
-      status_cake_api_key = "$(STATUS_CAKE_API_KEY)"
-      status_cake_contact_group = "$(STATUS_CAKE_CONTACT_GROUP)"
-      covid-19-testing-channel-availability-host = "$(COVID_19_TCA_HOST)"
-      dps-submission-api-host = "$(DPS_SUBMISSION_API_HOST)"
-      _EOF
-      
-      envsubst < ./tmp.tfvars.tmp > ./tmp.tfvars
-      
-      terraform plan -input=false -no-color  -var-file=./tmp.tfvars -out tfplan.out
-      terraform apply -no-color -auto-approve tfplan.out
-      fi
-    displayName: 'Deploy $(SERVICE_NAME) > Deploy'
-  
-  - bash: |
-      set -euo pipefail
-    displayName: 'Deploy $(SERVICE_NAME) > Smoke test'
+
+      export SERVICE_DIR=`realpath "$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)"`
+      export PROXY_DIR="$SERVICE_DIR/proxies/$(PROXY_NAME)"
+      export SERVICE_NAME="$(SERVICE_NAME)-$(APIGEE_ENVIRONMENT)"
+      export SERVICE_BASE_PATH="$(SERVICE_BASE_PATH)"
+      export APIGEE_ACCESS_TOKEN="$(secret.AccessToken)"
+      export PRODUCT_DISPLAY_NAME="Identity Service"
+      export PRODUCT_DESCRIPTION="OAuth provider for NHS ID"
+
+      cd utils
+      poetry run ansible-playbook ansible/deploy-apigee-proxy.yml
+      poetry run ansible-playbook ansible/deploy-apigee-product.yml
+    displayName: 'Deploy $(SERVICE_NAME) > Deploy Proxy and Product'
