--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -45,4 +45,5 @@ stages:
               steps:
                 - template: templates/identity-service-templating.yml
                 - template: templates/setup-build-name.yml
+                - template: templates/associate-build-with-branch.yml
                 - template: templates/deploy-namespaced-service.yml
