--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -33,8 +33,14 @@ stages:
   - stage: DeployInternalDev
     displayName: internal-dev
     variables:
-    - group: apigee-nonprod
-    - group: env-internal-dev
+    # - group: apigee-nonprod
+    # - group: env-internal-dev
+    - name: aws-label-ptl-or-prod
+      value: ptl
+    - name: aws-label-apigee-org
+      value: apigee-nonprod
+    - name: aws-label-apigee-env
+      value: env-internal-dev
     jobs:
       - deployment: DeployService
         displayName: Deploy Service
@@ -43,6 +49,7 @@ stages:
           runOnce:
             deploy:
               steps:
+                - template: components/get-aws-secrets-and-ssm-params.yml
                 - template: templates/identity-service-templating.yml
                 - template: templates/setup-build-name.yml
                 - template: templates/deploy-namespaced-service.yml
