--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -25,6 +25,8 @@ variables:
   FORCE_SANDBOX: false
   NAMESPACE: from_branchname
   PROXY_NAME: live
+  GITHUB_ACCESS_TOKEN: $(GITHUB_ACCESS_TOKEN)
+
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -43,6 +45,8 @@ stages:
           runOnce:
             deploy:
               steps:
+                - template: components/notify-github-pending.yml
                 - template: templates/identity-service-templating.yml
                 - template: templates/setup-build-name.yml
                 - template: templates/deploy-namespaced-service.yml
+                - template: components/notify-github-finished.yml
