--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -28,8 +28,13 @@ stages:
 - stage: DeployInternalDev
   displayName: internal-dev
   variables:
-  - group: apigee-nonprod
-  - group: env-internal-dev
+  - name: aws-label-ptl-or-prod
+    value: ptl
+  - name: aws-label-apigee-org
+    value: apigee-nonprod
+  - name: aws-label-apigee-env
+    value: env-internal-dev
+
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
@@ -38,6 +43,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/identity-service-templating.yml
               - template: templates/deploy-service.yml
 
@@ -45,8 +51,12 @@ stages:
   displayName: internal-qa
   dependsOn: DeployInternalDev
   variables:
-    - group: apigee-nonprod
-    - group: env-internal-qa
+    - name: aws-label-ptl-or-prod
+      value: ptl
+    - name: aws-label-apigee-org
+      value: apigee-nonprod
+    - name: aws-label-apigee-env
+      value: env-internal-qa
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
@@ -55,6 +65,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/identity-service-templating.yml
               - template: templates/deploy-service.yml
 
@@ -62,8 +73,12 @@ stages:
   displayName: internal-qa-sandbox
   dependsOn: DeployInternalDev
   variables:
-    - group: apigee-nonprod
-    - group: env-internal-qa-sandbox
+    - name: aws-label-ptl-or-prod
+      value: ptl
+    - name: aws-label-apigee-org
+      value: apigee-nonprod
+    - name: aws-label-apigee-env
+     value: env-internal-qa-sandbox
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
@@ -72,6 +87,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/identity-service-templating.yml
               - template: templates/deploy-service.yml
 
@@ -79,8 +95,12 @@ stages:
   displayName: internal-portal
   dependsOn: DeployInternalDev
   variables:
-    - group: apigee-nonprod
-    - group: env-internal-portal
+    - name: aws-label-ptl-or-prod
+      value: ptl
+    - name: aws-label-apigee-org
+      value: apigee-nonprod
+    - name: aws-label-apigee-env
+      value: env-internal-portal
   jobs:
     - deployment: DeploySpecs
       displayName: Deploy Specs
@@ -89,6 +109,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/deploy-specs.yml
 
 - stage: DeployRef
@@ -97,8 +118,12 @@ stages:
     - DeployInternalQA
     - DeployInternalQASandbox
   variables:
-    - group: apigee-nonprod
-    - group: env-ref
+    - name: aws-label-ptl-or-prod
+      value: ptl
+    - name: aws-label-apigee-org
+      value: apigee-nonprod
+    - name: aws-label-apigee-env
+      value: env-ref
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
@@ -107,6 +132,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/identity-service-templating.yml
               - template: templates/deploy-service.yml
 
@@ -115,8 +141,12 @@ stages:
   dependsOn: 
     - DeployRef
   variables:
-    - group: apigee-prod
-    - group: env-dev
+    - name: aws-label-ptl-or-prod
+      value: prod
+    - name: aws-label-apigee-org
+      value: apigee-prod
+    - name: aws-label-apigee-env
+      value: env-dev
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
@@ -125,6 +155,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/identity-service-templating.yml
               - template: templates/deploy-service.yml
 
@@ -133,8 +164,12 @@ stages:
   dependsOn: 
     - DeployRef
   variables:
-    - group: apigee-prod
-    - group: env-prod
+    - name: aws-label-ptl-or-prod
+      value: prod
+    - name: aws-label-apigee-org
+      value: apigee-prod
+    - name: aws-label-apigee-env
+      value: env-prod
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
@@ -143,6 +178,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/identity-service-templating.yml
               - template: templates/deploy-service.yml
 
@@ -151,8 +187,12 @@ stages:
   dependsOn: 
     - DeployRef
   variables:
-    - group: apigee-prod
-    - group: env-sandbox
+    - name: aws-label-ptl-or-prod
+      value: prod
+    - name: aws-label-apigee-org
+      value: apigee-prod
+    - name: aws-label-apigee-env
+      value: env-sandbox
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
@@ -161,6 +201,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/identity-service-templating.yml
               - template: templates/deploy-service.yml
 
@@ -169,8 +210,12 @@ stages:
   dependsOn: 
     - DeployRef
   variables:
-    - group: apigee-prod
-    - group: env-int
+    - name: aws-label-ptl-or-prod
+      value: prod
+    - name: aws-label-apigee-org
+      value: apigee-prod
+    - name: aws-label-apigee-env
+      value: env-int
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
@@ -179,6 +224,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/identity-service-templating.yml
               - template: templates/deploy-service.yml
 
@@ -187,8 +233,12 @@ stages:
   dependsOn: 
     - DeployRef
   variables:
-    - group: apigee-prod
-    - group: env-int
+    - name: aws-label-ptl-or-prod
+      value: prod
+    - name: aws-label-apigee-org
+      value: apigee-prod
+    - name: aws-label-apigee-env
+      value: env-int
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
@@ -197,6 +247,7 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/identity-service-templating.yml
               - template: templates/deploy-service.yml
 
@@ -204,8 +255,12 @@ stages:
   displayName: portal
   dependsOn: []
   variables:
-    - group: apigee-prod
-    - group: env-portal
+    - name: aws-label-ptl-or-prod
+      value: prod
+    - name: aws-label-apigee-org
+      value: apigee-prod
+    - name: aws-label-apigee-env
+      value: env-portal
   jobs:
     - deployment: DeploySpecs
       displayName: Deploy Specs
@@ -215,4 +270,5 @@ stages:
         runOnce:
           deploy:
             steps:
+              - template: components/get-aws-secrets-and-ssm-params.yml
               - template: templates/deploy-specs.yml
