--- a/azure/components/get-aws-secrets-and-ssm-params.yml
+++ b/azure/components/get-aws-secrets-and-ssm-params.yml
@@ -17,8 +17,7 @@ steps:
                          APIGEE_PASSWORD \
                          ; do
           secret_id="$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/${secret_name}"
-          secret_details=$(aws --profile apm_ptl secretsmanager get-secret-value --secret-id ${secret_id})
-          secret_value=$(echo $secret_details | jq -re .SecretString)
+          secret_value=$(aws --profile apm_ptl secretsmanager get-secret-value --secret-id ${secret_id} --query SecretString --output text)
           echo "##vso[task.setvariable variable=${secret_name};issecret=true]${secret_value}";
           unset secret_id secret_details secret_value
       done
@@ -31,22 +30,17 @@ steps:
       echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"
   
       # AWS cli can handle getting up to 10 params in a single call.
-      params=$(aws --profile apm_ptl ssm get-parameters --names \
+      params=($(aws --profile apm_ptl ssm get-parameters --names \
                 /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/APIGEE_USERNAME \
                 /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/APIGEE_ORGANIZATION \
                 /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-env)/APIGEE_ENVIRONMENT \
                 /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-env)/ENV_URL \
                 /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-env)/IDENTITY_URL \
-                | jq -cre .Parameters[]);
-      for param in ${params}; do
-          _apply_param() {
-              # name_parts is an array strings from splitting aws param path on forward-slash
-              local name_parts=( $(echo $param | jq -cre .Name | tr "/" " ") )
-              # name is the final string of that array
-              local name=${name_parts[$((${#name_parts[@]} - 1))]}
-              local value=$(echo $param | jq -cre .Value)
-              echo "##vso[task.setvariable variable=${name}]${value}"
-          }
-          _apply_param
+                --query 'Parameters[][Name, Value]' --output text))
+      for i in $(seq 0 2 $((${#params[@]}-2))); do
+          param_name=$(expr match ${params[i]} '.*/\(.*\)')
+          param_value=${params[$((i+1))]}
+          echo "##vso[task.setvariable variable=${param_name}]${param_value}"
+          unset param_name param_value
       done
     displayName: 'Get AWS SSM parameters'
