--- a/azure/components/get-aws-secrets-and-ssm-params.yml
+++ b/azure/components/get-aws-secrets-and-ssm-params.yml
@@ -12,14 +12,15 @@ steps:
   
   - bash: |
       set -euo pipefail
-      
-      for secret_name in APIGEE_OTP_KEY \
-                         APIGEE_PASSWORD \
-                         ; do
-          secret_id="$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/${secret_name}"
+
+      for secret_id in $(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/APIGEE_OTP_KEY \
+                       $(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/APIGEE_PASSWORD \
+                       ptl/access-tokens/github/repo-status-update/GITHUB_ACCESS_TOKEN \
+                       ; do
+          secret_name=$(expr match ${secret_id} '.*/\(.*\)')
           secret_value=$(aws --profile apm_ptl secretsmanager get-secret-value --secret-id ${secret_id} --query SecretString --output text)
           echo "##vso[task.setvariable variable=${secret_name};issecret=true]${secret_value}";
-          unset secret_id secret_details secret_value
+          unset secret_name secret_value
       done
     displayName: 'Get AWS secrets'
   
@@ -36,6 +37,7 @@ steps:
                 /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-env)/APIGEE_ENVIRONMENT \
                 /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-env)/ENV_URL \
                 /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-env)/IDENTITY_URL \
+                /ptl/azure-devops/GITHUB_USER \
                 --query 'Parameters[][Name, Value]' --output text))
       for i in $(seq 0 2 $((${#params[@]}-2))); do
           param_name=$(expr match ${params[i]} '.*/\(.*\)')
