--- a/azure/components/get-aws-secrets-and-ssm-params.yml
+++ b/azure/components/get-aws-secrets-and-ssm-params.yml
@@ -1,3 +1,11 @@
+parameters:
+  - name: SECRET_IDS
+    type: string
+    default: ''
+  - name: PARAM_NAMES
+    type: string
+    default: ''
+
 steps:
   - task: DownloadSecureFile@1
     name: aws_config
@@ -12,15 +20,16 @@ steps:
   
   - bash: |
       set -euo pipefail
-
-      for secret_id in $(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/APIGEE_OTP_KEY \
-                       $(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/APIGEE_PASSWORD \
-                       ptl/access-tokens/github/repo-status-update/GITHUB_ACCESS_TOKEN \
-                       ; do
+      echo "SECRET IDS:"
+      echo "${{ parameters.SECRET_IDS }}"
+      echo ""
+      for secret_id in ${{ parameters.SECRET_IDS }}
+      do
+          echo ${secret_id}
           secret_name=$(expr match ${secret_id} '.*/\(.*\)')
-          secret_value=$(aws --profile apm_ptl secretsmanager get-secret-value --secret-id ${secret_id} --query SecretString --output text)
-          echo "##vso[task.setvariable variable=${secret_name};issecret=true]${secret_value}";
-          unset secret_name secret_value
+          # secret_value=$(aws --profile apm_ptl secretsmanager get-secret-value --secret-id ${secret_id} --query SecretString --output text)
+          # echo "##vso[task.setvariable variable=${secret_name};issecret=true]${secret_value}"
+          # unset secret_name secret_value
       done
     displayName: 'Get AWS secrets'
   
@@ -29,20 +38,21 @@ steps:
       
       export SERVICE_ARTIFACT_NAME=`ls $(Pipeline.Workspace)/$(SERVICE_NAME)`
       echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"
-  
-      # AWS cli can handle getting up to 10 params in a single call.
-      params=($(aws --profile apm_ptl ssm get-parameters --names \
-                /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/APIGEE_USERNAME \
-                /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-org)/APIGEE_ORGANIZATION \
-                /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-env)/APIGEE_ENVIRONMENT \
-                /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-env)/ENV_URL \
-                /$(aws-label-ptl-or-prod)/azure-devops/$(aws-label-apigee-env)/IDENTITY_URL \
-                /ptl/azure-devops/GITHUB_USER \
-                --query 'Parameters[][Name, Value]' --output text))
-      for i in $(seq 0 2 $((${#params[@]}-2))); do
+
+      echo PARAM_NAMES:"
+      echo $(PARAM_NAMES)
+      echo ""
+
+      if [[ ${{ parameters.PARAM_NAMES }} ]]; then
+        # AWS cli can handle getting up to 10 params in a single call.
+        params=($(aws --profile apm_ptl ssm get-parameters \
+                  --names ${{ parameters.PARAM_NAMES }} \
+                  --query 'Parameters[][Name, Value]' --output text))
+        for i in $(seq 0 2 $((${#params[@]}-2))); do
           param_name=$(expr match ${params[i]} '.*/\(.*\)')
           param_value=${params[$((i+1))]}
           echo "##vso[task.setvariable variable=${param_name}]${param_value}"
           unset param_name param_value
-      done
+        done
+      fi
     displayName: 'Get AWS SSM parameters'
