--- a/azure/components/get-access-token.yml
+++ b/azure/components/get-access-token.yml
@@ -1,10 +1,6 @@
 parameters:
   - name: serviceName
     type: string
-  - name: apigeeUsername
-    type: string
-  - name: apigeePassword
-    type: string
     
 steps:
   - bash: |
@@ -12,8 +8,8 @@ steps:
         -H "Content-Type: application/x-www-form-urlencoded" \
         -H "Accept: application/json;charset=utf-8" \
         -H "Authorization: Basic ZWRnZWNsaTplZGdlY2xpc2VjcmV0" \
-        -d "username=${{ parameters.apigeeUsername }}&password=${{ parameters.apigeePassword }}&mfa_token=$(secret.MFACode)&grant_type=password" | jq .access_token > .token
-      
+        -d "username=$(APIGEE_USERNAME)&password=$(APIGEE_PASSWORD)&mfa_token=$(secret.MFACode)&grant_type=password" | jq -e .access_token > .token
+
       # Set token into variable
       echo "##vso[task.setvariable variable=secret.AccessToken;issecret=true]`cat .token`"
     displayName: 'Deploy ${{ parameters.serviceName }} > Get Access Token'
