--- a/azure/components/notify-github-pending.yml
+++ b/azure/components/notify-github-pending.yml
@@ -4,5 +4,5 @@ steps:
     displayName: Set COMMIT_HASH
 
   - bash: |
-      curl --fail -q -X POST "https://api.github.com/repos/$(Build.Repository.Name)/statuses/$(COMMIT_HASH)" -d '{"state": "pending", "context": "$(Build.DefinitionName)", "description": "PR Deploy has started...", "target_url": "https://dev.azure.com/NHSD-APIM/API%20Platform/_build/results?buildId=$(Build.BuildID)"}' --user $(GITHUB_USER):$(GITHUB_ACCESS_TOKEN)
+      curl --fail -q -X POST "https://api.github.com/repos/$(Build.Repository.Name)/statuses/$(COMMIT_HASH)" -d '{"state": "pending", "context": "$(Build.DefinitionName)", "description": "PR Deploy has started...", "target_url": "https://dev.azure.com/NHSD-APIM/API%20Platform/_build/results?buildId=$(Build.BuildID)"}' --user "$(GITHUB_USER):$(GITHUB_ACCESS_TOKEN)"
     displayName: "Notify GitHub that the pipeline has started"
