--- a/azure/components/get-aws-secrets-and-ssm-params.yml
+++ b/azure/components/get-aws-secrets-and-ssm-params.yml
@@ -20,16 +20,13 @@ steps:
   
   - bash: |
       set -euo pipefail
-      echo "SECRET IDS:"
-      echo "${{ parameters.SECRET_IDS }}"
-      echo ""
+
       for secret_id in ${{ parameters.SECRET_IDS }}
       do
-          echo ${secret_id}
           secret_name=$(expr match ${secret_id} '.*/\(.*\)')
-          # secret_value=$(aws --profile apm_ptl secretsmanager get-secret-value --secret-id ${secret_id} --query SecretString --output text)
-          # echo "##vso[task.setvariable variable=${secret_name};issecret=true]${secret_value}"
-          # unset secret_name secret_value
+          secret_value=$(aws --profile apm_ptl secretsmanager get-secret-value --secret-id ${secret_id} --query SecretString --output text)
+          echo "##vso[task.setvariable variable=${secret_name};issecret=true]${secret_value}"
+          unset secret_name secret_value
       done
     displayName: 'Get AWS secrets'
   
@@ -39,20 +36,14 @@ steps:
       export SERVICE_ARTIFACT_NAME=`ls $(Pipeline.Workspace)/$(SERVICE_NAME)`
       echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"
 
-      echo PARAM_NAMES:"
-      echo $(PARAM_NAMES)
-      echo ""
-
-      if [[ ${{ parameters.PARAM_NAMES }} ]]; then
-        # AWS cli can handle getting up to 10 params in a single call.
-        params=($(aws --profile apm_ptl ssm get-parameters \
-                  --names ${{ parameters.PARAM_NAMES }} \
-                  --query 'Parameters[][Name, Value]' --output text))
-        for i in $(seq 0 2 $((${#params[@]}-2))); do
-          param_name=$(expr match ${params[i]} '.*/\(.*\)')
-          param_value=${params[$((i+1))]}
-          echo "##vso[task.setvariable variable=${param_name}]${param_value}"
-          unset param_name param_value
-        done
-      fi
+      # AWS cli can handle getting up to 10 params in a single call.
+      params=($(aws --profile apm_ptl ssm get-parameters \
+                --names ${PARAM_NAMES} \
+                --query 'Parameters[][Name, Value]' --output text))
+      for i in $(seq 0 2 $((${#params[@]}-2))); do
+        param_name=$(expr match ${params[i]} '.*/\(.*\)')
+        param_value=${params[$((i+1))]}
+        echo "##vso[task.setvariable variable=${param_name}]${param_value}"
+        unset param_name param_value
+      done
     displayName: 'Get AWS SSM parameters'
