--- a/azure/components/get-aws-secrets-and-ssm-params.yml
+++ b/azure/components/get-aws-secrets-and-ssm-params.yml
@@ -35,7 +35,7 @@ steps:
       
       export SERVICE_ARTIFACT_NAME=`ls $(Pipeline.Workspace)/$(SERVICE_NAME)`
       echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"
-
+      export PARAM_NAMES="${{ parameters.PARAM_NAMES }}"
       # AWS cli can handle getting up to 10 params in a single call.
       params=($(aws --profile apm_ptl ssm get-parameters \
                 --names ${PARAM_NAMES} \
