APM-1279 Get int-no-smartcard variables from correct location

--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -279,6 +279,10 @@ stages:
       value: identity-server-no-smartcard
     - name: SERVICE_BASE_PATH
       value: oauth2-no-smartcard
+    - name: VARIABLES_KVM
+      value: identity-service-variables-no-smartcard
+    - name: ENCRYPTED_VARIABLES_KVM
+      value: identity-service-variables-encrypted
   jobs:
     - deployment: DeployService
       displayName: Deploy Service
