APM-1104 Change directory

--- a/azure/templates/execute-api-tests.yml
+++ b/azure/templates/execute-api-tests.yml
@@ -1,5 +1,5 @@
 steps:
   - bash: |
-      cd /api_tests
+      cd $(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/api_tests
       make setup
     displayName: Build Test Docker Image
