APM-1213 Rename project-vars.yml -> project.yml

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -24,7 +24,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  - template: project-vars.yml
+  - template: project.yml
 
 extends:
   template: azure/common/apigee-deployment.yml@common
