--- a/azure/azure-build-pipeline.yml
+++ b/azure/azure-build-pipeline.yml
@@ -21,7 +21,7 @@ resources:
       endpoint: NHSDigital
 
 variables:
-  - template: project-vars.yml
+  - template: project.yml
 
 extends:
   template: azure/common/apigee-build.yml@common
