--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -22,7 +22,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  - template: project-vars.yml
+  - template: project.yml
 
 extends:
   template: azure/common/apigee-deployment.yml@common
