--- a/azure/project.yml
+++ b/azure/project.yml
@@ -1,5 +1,5 @@
 variables:
-  service_name: pipeline-service
-  service_base_path: dummy
+  service_name: identity-service
+  service_base_path: oauth2
   product_display_name: Identity Service
   product_description: Placeholder description
