--- a/azure/project.yml
+++ b/azure/project.yml
@@ -3,3 +3,4 @@ variables:
   service_base_path: oauth2
   product_display_name: Identity Service
   product_description: Placeholder description
+  System.Debug: true
