--- a/azure/azure-build-pipeline.yml
+++ b/azure/azure-build-pipeline.yml
@@ -27,3 +27,4 @@ extends:
   template: azure/common/apigee-build.yml@common
   parameters:
     service_name: ${{ variables.service_name }}
+    short_service_name: ${{ variables.short_service_name }}
