--- a/azure/project.yml
+++ b/azure/project.yml
@@ -1,5 +1,6 @@
 variables:
   service_name: identity-service
+  short_service_name: ids
   service_base_path: oauth2
   product_display_name: Identity Service
   product_description: Placeholder description
