--- a/ecs-proxies-containers.yml
+++ b/ecs-proxies-containers.yml
@@ -1,4 +1,4 @@
 docker_containers:
-  - name: identity-service-sandbox
+  - name: sandbox
     dockerfile: "docker/dummy-api/Dockerfile"
     path: "docker/dummy-api"
