APM-1313 Fix path for KVM step

--- a/azure/templates/identity-service-templating.yml
+++ b/azure/templates/identity-service-templating.yml
@@ -12,7 +12,7 @@ steps:
   - bash: |
       set -euo pipefail
 
-      cd $(Pipeline.Workspace)/s/${{ parameters.service_name }}/utils
+      cd $(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/utils
 
       poetry run python scripts/template.py '{"VARIABLES_KVM": "${{ parameters.variables_kvm }}"}' --file=$(Pipeline.Workspace)/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml > /tmp/live.xml
       mv /tmp/live.xml $(Pipeline.Workspace)/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml
