APM-1313 Get commit hash of pr

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -34,6 +34,7 @@ extends:
     product_display_name: ${{ variables.product_display_name }}
     product_description: ${{ variables.product_description }}
     pre_template:
+      - bash: echo $(System.PullRequest.SourceCommitId)
       - template: azure/components/update-github-status.yml@common
         parameters:
           state: pending
