APM-1162 Update common pipeline interface

--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -10,8 +10,8 @@ resources:
       name: NHSDigital/api-management-utils
       endpoint: NHSDigital
   pipelines:
-  - pipeline: Identity-Service-Build
-    source: Identity-Service-Build
+  - pipeline: build_pipeline
+    source: "Identity-Service-Build"
     trigger:
       branches:
         include:
