APM-1327 Add missing variable

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -36,6 +36,7 @@ extends:
     pre_template:
       - template: "templates/identity-service-templating.yml"
         parameters:
+          service_name: ${{ variables.service_name }}
           variables_kvm: "identity-service-variables"
           encrypted_variables_kvm: "identity-service-variables-encrypted"
           identity_target_server: "identity-server"
